<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:background="#bb000000"
    tools:context=".MenuInfoActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu_info_dialog_text"
        android:textSize="14dp"
        android:textColor="#FFFFFF"
        android:textStyle="normal"/>
    <kr.devs.geniusbean.utils.FloatingEditText
        android:id="@+id/dialog_hello_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:maxLength="20"
        android:textColor="#FFFFFF"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">
        <kr.devs.geniusbean.utils.PaperButton
            android:id="@+id/dialog_hello_btn"
            widget:paper_text="@string/menu_info_dialog_btn"
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="54dp"
            widget:paper_text_color="#111111"/>
        <kr.devs.geniusbean.utils.PaperButton
            android:id="@+id/dialog_hello_cancel"
            widget:paper_text="@string/menu_info_dialog_cancel"
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="54dp"
            widget:paper_text_color="#111111"/>
    </LinearLayout>

</LinearLayout>