<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:accordion="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/main_background_top">
        <!-- TOP LAYOUT FOR CHATTING -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!-- REAL TOP AREA -->
            <ImageView
                android:id="@+id/scr_main_top_type"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_news_type_notice"/>
            <TextView
                android:id="@+id/scr_main_top_news"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="2dp"
                android:textSize="14dp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_notice"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scr_main_feature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:visibility="visible"
        android:orientation="vertical"
        android:background="@drawable/main_background_feature">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <!-- FEATURE TOP AREA -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">
                    <ImageView
                        android:id="@+id/scr_menu_setting_menu_i"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="-8dp"
                        android:src="@drawable/menu_btn_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/main_menu_i"
                        android:textColor="#fff9c55c"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">
                    <ImageView
                        android:id="@+id/scr_menu_setting_menu_ii"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="-8dp"
                        android:src="@drawable/menu_btn_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/main_menu_ii"
                        android:textColor="#fff9c55c"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">
                    <ImageView
                        android:id="@+id/scr_menu_setting_menu_iii"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="-8dp"
                        android:src="@drawable/menu_btn_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/main_menu_iii"
                        android:textColor="#fff9c55c"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">
                    <ImageView
                        android:id="@+id/scr_menu_setting_menu_iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="-8dp"
                        android:src="@drawable/menu_btn_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/main_menu_iv"
                        android:textColor="#fff9c55c"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">
                    <ImageView
                        android:id="@+id/scr_menu_setting_menu_v"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_alignParentBottom="true"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="-8dp"
                        android:src="@drawable/menu_btn_small"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/main_menu_v"
                        android:textColor="#fff9c55c"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:orientation="vertical"
                    android:gravity="bottom">
                    <ImageView
                        android:id="@+id/scr_menu_setting_menu_vi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:scaleType="fitXY"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="-1dp"
                        android:src="@drawable/menu_btn_big"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/main_menu_vi"
                        android:textColor="#ff514939"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#fff9c55d"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:background="@drawable/main_background_feature_box">
                <!-- FEATURE TOP AREA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:background="#bb000000">
                    <!-- REAL CONTENT -->
                    <ScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <kr.devs.geniusbean.utils.Accordion.AccordionView
                            android:id="@+id/accordion_view"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            accordion:header_layout_fold_button_id="@id/foldButton"
                            accordion:header_layout_id="@layout/accordion_header"
                            accordion:header_layout_label_id="@id/foldText"
                            accordion:section_bottom="@layout/accordion_footer"
                            accordion:section_container="@layout/accordion_section"
                            accordion:section_container_parent="@id/section_content"
                            accordion:section_headers="@array/accordion_sections"
                            accordion:section_visibility="@array/accordion_visibility"
                            android:background="#00000000"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="3"
                                    android:orientation="vertical">
                                    <TextView
                                        android:id="@+id/scr_menu_setting_resource_dir"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="center_vertical|left"
                                        android:text="@string/menu_setting_resource_dir"
                                        android:textSize="13dp"
                                        android:textColor="#FFFFFF"/>
                                    <TextView
                                        android:id="@+id/scr_menu_setting_resource_folder"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="center_vertical|left"
                                        android:text="@string/menu_setting_resource_folder"
                                        android:textSize="13dp"
                                        android:textColor="#FFFFFF"/>
                                </LinearLayout>
                                <Button
                                    android:id="@+id/scr_menu_setting_resource_btn"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/menu_setting_resource_clear"
                                    android:textColor="#FFFFFF"/>
                            </LinearLayout>
                        </kr.devs.geniusbean.utils.Accordion.AccordionView>
                    </ScrollView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/devslogo_long_white"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#fff9c55d"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>